--- a/main.html
+++ b/main.html
@@ -84,7 +84,7 @@
           />
         </div>
 
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Salvar</button>
       </form>
     </div>
   </body>
